[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "www-authenticate"
version = "0.2.0"
license = "MIT"
description = "missing HTTP WWW-Authenticate header parser/printer for hyper 0.10.x"
readme = "README.md"
documentation = "http://docs.rs/www-authenticate/0.1.0/www-authenticate"
repository = "https://github.com/KeenS/www-authenticate"
keywords = ["http", "hyper", "hyperium", "authentication"]
categories = ["web-programming::http-client", "web-programming::http-server"]

[dependencies]
hyper = "0.11.0"
unicase = "1.0"
url = "1.5"
